Update image path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <header>
             <div class="logo">
-                <img src="/imgs/SE.png" alt="simple-expenses-logo">
+                <img src="./imgs/SE.png" alt="simple-expenses-logo">
             </div>
         </header>
         <section class="about">
@@ -21,7 +21,7 @@
                 in a simple, modern and sceure platfrom </p>
             <h2>Test the prototype and give us your feedback</h2>
             <div class="qr-conatiner">
-                <img src="/imgs/Simple_Expenses.png" alt="Download Simple Expenses on Google Play Store">
+                <img src="./imgs/Simple_Expenses.png" alt="Download Simple Expenses on Google Play Store">
             </div>
         </section>
     </main>
