Remove QR code and replace it with Get it on Google Play Button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             <p>Simple Expenses is an intuitve money managment solution where we aim to simplfy your financial experince
                 in a simple, modern and sceure platfrom </p>
             <h2>Test the prototype and give us your feedback</h2>
-            <div class="qr-conatiner">
-                <img src="./imgs/Simple_Expenses.png" alt="Download Simple Expenses on Google Play Store">
+            <div class="download-button">
+                <a
+                    href='https://play.google.com/store/apps/details?id=com.azakamala.simple_expense&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
+                        alt='Get it on Google Play'
+                        src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png' /></a>
             </div>
         </section>
     </main>
@@ -41,10 +44,12 @@
             place-content: center;
             height: 900px;
         }
+
         header {
             display: flex;
             justify-self: center;
         }
+
         .logo {
             width: 200px;
         }
@@ -77,9 +82,8 @@
             margin: 45px 0;
         }
 
-        .qr-conatiner {
-            height: 200px;
-            width: 200px;
+        .download-button {
+            width: 20%;
             margin: auto;
         }
     </style>
